# Sertay_Thesis

./: .gitignore  .gitmodules  README.md
SIF_wasm_dht/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
SIF_wasm_dht/main/: CMakeLists.txt  Kconfig.projbuild  basicWasmEvent.cpp  basicWasmEvent.hpp  basicWasmTrigger.cpp  basicWasmTrigger.hpp  main.cpp  sif_contractPolicy.hpp  sif_control.cpp  sif_control.hpp  sif_controlMessageAssembler.hpp  sif_httpForward.cpp  sif_httpForward.hpp  sif_led.cpp  sif_led.hpp  sif_ledPolicy.hpp  sif_migratingWasmFunction.cpp  sif_migratingWasmFunction.hpp  sif_release.cpp  sif_release.hpp  sif_state.cpp  sif_state.hpp  sif_telemetry.cpp  sif_telemetry.hpp  sif_wasmHostApi.cpp  sif_wasmHostApi.hpp  sif_wasmPull.cpp  sif_wasmPull.hpp  typeNumerations.hpp  wasmDhtReadE.cpp  wasmDhtReadE.hpp  wasmDhtT.cpp  wasmDhtT.hpp
edge/: README.md
edge/host/: Dockerfile  README.md  go.mod  go.sum  hal.go  main.go  main_test.go
edge/k8s/: registry.yaml
edge/operator/: .gitignore  Dockerfile  PROJECT  README.md  go.mod
technical/: 01-system-design.md  02-implementation.md  03-traceability-and-status.md  README.md
tools/: wasm_artifact_server.py
tools/tests/: sif_contract_policy_test.cpp  sif_control_message_assembler_test.cpp  sif_function_admission_test.cpp  sif_led_policy_test.cpp
wasm_guests/: README.md
wasm_guests/basic_edge_demo/: Cargo.toml  basic_edge_demo.wasm  basic_edge_demo_wasm.h  publish.sh
wasm_guests/dht_reader/: Cargo.toml  dht_reader_wasm.h  publish.sh
wasm_guests/hybrid_resource_demo/: Cargo.toml  (+2 more)
(+36 files in other folders)
